Mon Jun 07 10:33:07 GMT 2010  Richard Boulton <richard@tartarus.org>

	* include/xapian/geospatial.h: Finish incomplete documentation
	  comment.

Sun Jun 06 15:40:07 GMT 2010  Richard Boulton <richard@tartarus.org>

	* geospatial/latlong_posting_source.cc: Change the name() method to
	  just return a string literal, instead of wrapping one in string()
	  to be returned, for consistency with all the other name()
	  methods.

Sun Jun 06 15:36:45 GMT 2010  Richard Boulton <richard@tartarus.org>

	* geospatial/latlong_metrics.cc: Changed the clamping to 1.0 for
	  {{{GreatCircleMetric}}} to be before the sqrt().  Also wrapped it
	  in "rare()".

Sun Jun 06 15:31:21 GMT 2010  Richard Boulton <richard@tartarus.org>

	* geospatial/latlong_distance_keymaker.cc,
	  geospatial/latlong_metrics.cc,geospatial/latlongcoord.cc: Change
	  character used to introduce doxygen comments from \ to @.

Sun Jun 06 15:21:15 GMT 2010  Richard Boulton <richard@tartarus.org>

	* include/xapian/geospatial.h: Make the constructor of
	  GreatCircleMetric which takes a radius explicit, and fix and
	  expand the documentation comment.

Sun Jun 06 15:14:32 GMT 2010  Richard Boulton <richard@tartarus.org>

	* docs/geospatial.rst,geospatial/latlong_metrics.cc,
	  include/xapian/geospatial.h: Correct capitalisation of "earth" to
	  "Earth".

Sun Jun 06 15:04:42 GMT 2010  Richard Boulton <richard@tartarus.org>

	* Makefile.am,api/omqueryinternal.cc,api/postingsource.cc,
	  api/registry.cc,common/output.h,common/registryinternal.h,
	  docs/geospatial.rst,geospatial/,include/Makefile.mk,include/xapian.h,
	  include/xapian/geospatial.h,include/xapian/postingsource.h,
	  include/xapian/registry.h,tests/Makefile.am,tests/api_geospatial.cc:
	  Apply patch geospatial_clean3.patch from ticket #481: adds basic
	  geospatial search support.

Sun Jun 06 04:34:13 GMT 2010  Olly Betts <olly@survex.com>

	* bin/Makefile.mk,configure.ac: Fix build failures with some