@@ -1,3 +1,8 @@
+Mon Jun 07 10:41:46 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* geospatial/latlong_posting_source.cc: Convert several instances
+	  of string building with "+" to use "+=".
+
 Mon Jun 07 10:33:07 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* include/xapian/geospatial.h: Finish incomplete documentation
